web/src/css/App.css
@import url('https://fonts.googleapis.com/css2?family=Lexend&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --primary-background-color: #F5F5F5;
    --disabled-background-color: #D9D9D9;
    --selected-background-color: #D2052F;
    --primary-hover-background-color: #BC042A;
    --primary-pressed-background-color: #A60324;
    --secondary-hover-background-color: #E7E7E7;
    --secondary-pressed-background-color: #D9D9D9;
    --primary-text-color: #000000;
    --secondary-text-color: #D2052F;
    --tertiary-text-color: #8E8E8E;
    --quaternary-text-color: #2F4858;
    --disabled-text-color: #8E8E8E;
    --selected-text-color: #FFFFFF;
    --primary-border-color: #2F4858;
    --selected-border-color: #D2052F;
    --tertiary-border-color: #8E8E8E;
    --quaternary-border-color: #D2052F;

    --border-radius: 5px;
}

#root {
    width: 100vw;
    height: 100vh;
    padding: 40px 20px;
}

main {
    height: 100%;
    display: flex;

    font-family: 'Lexend', sans-serif;
    font-size: 18px;
}

#leftPanel {
    width: 75vw;
}

#rightPanel {
    width: 25vw;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#leftPanel, #rightPanel {
    padding-inline: 30px;
}

h1 {
    margin-bottom: 10px;

    font-size: 26px;
    font-weight: normal;
}

h2 {
    font-size: 24px;
    font-weight: bold;
}

.primaryHorizontalDivider {
    margin: 15px 0;

    border: 1px solid var(--tertiary-border-color);
    border-radius: 2px;
}

.secondaryHorizontalDivider {
    width: 25%;
    margin: 3px 0 15px 0;

    border: 1px solid var(--quaternary-border-color);
    border-radius: 2px;
}

.primaryVerticalDivider {
    margin: 0 15px;

    border: 1px solid var(--quaternary-border-color);
    border-radius: 2px;
}

#dayRange {
    display: flex;
    gap: 20px;
    align-items: center;

    margin-bottom: 15px;
}

#dayRange button {
    padding: 10px;
    border: none;
    border-radius: var(--border-radius);
    cursor: pointer;
    background-color: #0000;
}

#dayRange button:hover {
    background-color: var(--secondary-hover-background-color);
}

#dayRange button:active {
    background-color: var(--secondary-pressed-background-color);
}

#dayRange p {
    width: 260px;
    text-align: center;
}

#daySelectorDays {
    display: flex;
    justify-content: space-between;
    gap: 20px;

    width: 100%;
}

.day {
    flex: 100% 0 1;

    display: flex;
    flex-direction: column;
    align-content: space-between;
    gap: 15px;

    padding: 10px;

    background-color: var(--primary-background-color);
    color: var(--primary-text-color);

    border: 1px solid var(--primary-border-color);
    border-radius: var(--border-radius);

    cursor: pointer;
}

.day:not(.selected, .disabled) div:first-of-type p {
    color: var(--tertiary-text-color);
}

.day.day:not(.selected, .disabled) div:last-of-type p {
    color: var(--secondary-text-color);
}

#timeRangeSelectors {
    display: flex;
    flex-direction: column;
    gap: 15px;
    height: 580px;
    overflow: scroll;
    padding: 15px 0;
}

#timeSlotsPanel {
    position: relative;
}

#timeSlotsPanel :is(#topShadow, #bottomShadow) {
    position: absolute;
    width: 100%;
    height: 15px;
    z-index: 3;
}

#timeSlotsPanel #topShadow {
    bottom: 0;
    background-image: linear-gradient(#fff0, #fff);
}

#timeSlotsPanel #bottomShadow {
    bottom: 565px;
    background-image: linear-gradient(#fff, #fff0);
}

.timeRangeSelector, .timeRangeDetails, .timeRangeSlots, .timeSlot {
    display: flex;
    align-items: center;
}

.timeRangeDetails, .timeRangeSlots, .timeSlot {
    border: 1px solid var(--primary-border-color);

    background-color: var(--primary-background-color);
}

.timeRangeDetails {
    justify-content: space-between;

    width: 175px;
    height: 60px;

    border-radius: var(--border-radius);

    z-index: 2;
    overflow: hidden;
}

.timeRangeDetails p {
    padding: 18px 10px;

    flex-grow: 1;
}

.timeRangeDetails button {
    height: 100%;
    padding: 10px;

    border: none;
    border-radius: 0 var(--border-radius) var(--border-radius) 0;

    background-color: #0000;
    color: inherit;

    cursor: pointer;
}

.timeRangeDetails .fa-angle-right {
    transition: transform .25s;
}

.opened .timeRangeDetails .fa-angle-right {
    transform: rotate(180deg);
}

.timeRangeSlots {
    gap: 30px;

    height: 48px;
    width: 0;
    padding: 0;
    margin-inline-start: -1px;

    border-left: none;
    border-radius: 0 5px 5px 0;

    overflow: hidden;

    transition: padding .25s;
}

.opened .timeRangeSlots {
    width: auto;
    padding-inline: 15px;
}

.timeSlot {
    justify-content: space-between;

    width: 200px;
    height: 20px;
    padding: 17px;

    border-radius: var(--border-radius);
}

.day, .timeSlot, .timeRangeDetails {
    user-select: none;
    cursor: pointer;
}

.selected {
    background-color: var(--selected-background-color);
    color: var(--selected-text-color);
    border-color: var(--selected-border-color);
}

.someSelected:not(.selected) {
    border-color: var(--quaternary-border-color);
    outline: solid 2px var(--quaternary-border-color);
}

.disabled, .disabled > * {
    background-color: var(--disabled-background-color) !important;
    color: var(--disabled-text-color) !important;
    cursor: default !important;
}

:is(.timeRangeDetails :is(button, p), .day, .timeSlot):hover {
    background-color: var(--secondary-hover-background-color);
}

:is(.timeRangeDetails.selected :is(button, p), .day.selected, .timeSlot.selected):hover {
    background-color: var(--primary-hover-background-color);
}

:is(.timeRangeDetails :is(button, p), .day, .timeSlot):active {
    background-color: var(--secondary-pressed-background-color);
}

:is(.timeRangeDetails.selected :is(button, p), .day.selected, .timeSlot.selected):active {
    background-color: var(--primary-pressed-background-color);
}

#formHeader {
    display: flex;
    gap: 15px;
    align-items: center;
}

#formHeader img {
    height: 100px;
    aspect-ratio: 1;
}

#formHeader .title {
    font-size: 35px;
    color: var(--tertiary-text-color);
}

#formHeader .subtitle {
    font-size: 35px;
    color: var(--primary-text-color);
    font-weight: bolder;
}

form {
    display: flex;
    flex-direction: column;
}

form h1 {
    margin-block-end: 5px;
}

form p {
    color: var(--tertiary-text-color);
    margin-block-end: 15px;
    text-align: justify;
}

.formInput {
    margin-block: 10px;
}

.formInput label {
    color: var(--quaternary-text-color);
    display: block;
    margin-block-end: 5px;
}

.formInput input {
    display: block;
    width: 100%;
    padding: 10px;
    border: 2px solid var(--primary-border-color);
    border-radius: var(--border-radius);
}

input[type="submit"] {
    font-family: 'Lexend', sans-serif;
    font-size: 16px;
    background-color: var(--selected-background-color);
    color: var(--selected-text-color);
    padding: 10px 30px;
    border: none;
    border-radius: var(--border-radius);
    align-self: flex-end;
    margin-block-start: 20px;
    cursor: pointer;
}

#form button:hover {
    background-color: var(--primary-hover-background-color);
}

#form button:active {
    background-color: var(--primary-pressed-background-color);
}

input {
    accent-color: var(--secondary-text-color);
}

#copy {
    color: var(--tertiary-text-color);
    text-align: center;
}

.loading {
    width: 100%;

    display: flex;
    justify-content: center;

    color: var(--secondary-text-color);
}

